Changed a page to dark mode, fixed some styling issues.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -111,14 +111,14 @@ li {
     color: white;
     font-family: var(--crim);
     font-size: 16px;
-    padding: 8px 12px;
+    padding: 8px 0px;
+    margin: 0px 12px;
     transition: border .2s ease;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 5px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0);
 }
 
 .navbar__menu a:hover {
-    border: 1px solid var(--border-grey);
+    border-bottom: 2px solid var(--yel);
 }
 
 .content-width {
@@ -394,6 +394,12 @@ li {
 .align-right {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+}
+
+.align-left {
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
 }
 
